--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="heading d-flex justify-content-between">
             <h3>Smartphones</h2>
-            <h5>See All</h5>
+         <p class="see-hov"> <a herf="#Smartphone">See All</a></p>
             </div> 
         <div class="card-deck">
             <div class="card">
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="heading d-flex justify-content-between">
             <h3>Laptop</h2>
-            <h5>See All</h5>
+              <p class="see-hov"> <a herf="#Laptop">See All</a></p>
             </div> 
         <div class="card-deck">
             <div class="card">
@@ -183,7 +183,7 @@
                         <div class="col-3">
                             <div class="">
                                 <div class="category_design d-flex justify-content-md-center align-items-md-center">
-                                    <img src="Categories/perfume.png" alt="Slide error!" class="category_elements" width="80">
+                                    <img src="Categories/perfume.png" alt="" class="category_elements" width="80">
                                 </div>
                             </div>
                             <br>
@@ -197,11 +197,10 @@
                             <img src="Categories/pale-order.png" class="d-flex w-100" alt="">
                         </div>
                     </div>
-            </section>
-
-        
-      </section>
-     
+           </section>
+                <footer>
+                  <p>© 2020 Hot-Gadgets . All rights reserved.</p>
+                </footer>
  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
